# portal

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  start
config/: settings.py  urls.py
static/css/: main.css  main.css.map  output.css  output.css.map
static/js/: header.js
templates/: base_single_column.html  index.html
templates/includes/: page_title_banner.html
templates/svg_icons/: hamburger.html  moon.html  sun.html
